--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 bottle==0.12.16
 cycler==0.10.0
+gunicorn==19.9.0
 kiwisolver==1.0.1
-matplotlib==3.0.2
 numpy==1.15.4
 pyparsing==2.3.0
 python-dateutil==2.7.5
